--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
 checkpoints/
 dataset/
 .ipynb_checkpoints/
+1224/
+1226-0538/
+1226-1105/
+1227-1930/
+1227-1940/
+20202739_DongwooKo.csv
+relation network(not used)/
